# UFox

./: CMakeLists.txt  LICENSE  README.md  hello_world.cppm  main.cpp  ufox_engine.cppm  ufox_graphic.cppm  ufox_lib.cppm  ufox_windowing.cppm
.github/workflows/: cmake-single-platform.yml
docs/: discadelta-algorithm-constraints.md  discadelta-algorithm-dynamic-placing.md  discadelta-algorithm-optimization.md  discadelta-algorithm.md  discadelta-layout.md
res/shaders/: gui_shader.frag  gui_shader.vert  test.slang
src/: README.md  main.cpp  ufox_engine.cppm  ufox_engine_core.cppm  ufox_engine_lib.cppm  ufox_font_core.cppm  ufox_font_lib.cppm  ufox_geometry.cppm  ufox_geometry_core.cppm  ufox_geometry_lib.cppm  ufox_gpu_core.cppm  ufox_gpu_lib.cppm  ufox_graphic_device.cppm  ufox_gui.cppm  ufox_gui_core.cppm  ufox_gui_lib.cppm  ufox_gui_renderer.cppm  ufox_input.cppm  ufox_lib.cppm  ufox_nanoid.cppm  ufox_render_core.cppm  ufox_render_lib.cppm  ufox_renderer.cppm  ufox_resource_editor.cppm  ufox_resource_manager.cppm  ufox_windowing.cppm
